--- a/static/customcss/login.css
+++ b/static/customcss/login.css
@@ -13,7 +13,7 @@
         }
 
         .github-btn:hover {
-            background-color: #444d56;
+            background-color: white;
         }
 
         .github-btn img {
