--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
   <title>Podcast &mdash; Colorlib Website Template</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,700,900">
   <link rel="stylesheet" href="/static/fonts/icomoon/style.css">
@@ -18,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
-  <link rel="stylesheet" href="/static/css/aos.css">
+{#  <link rel="stylesheet" href="/static/css/aos.css">#}
 
   <link rel="stylesheet" href="/static/css/style.css">
     {%block extrastylesheet %} {% endblock %}
