--- a/templates/footer.html
+++ b/templates/footer.html
@@ -56,7 +56,7 @@
     }
   });
 </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="/static/js/jquery-3.3.1.min.js"></script>
   <script src="/static/js/jquery-migrate-3.0.1.min.js"></script>
   <script src="/static/js/jquery-ui.js"></script>
