--- a/templates/episodeslist.html
+++ b/templates/episodeslist.html
@@ -102,7 +102,11 @@
 
                 <i class="fas fa-list"></i>
             </button>
-
+                 <div class="player">
+                  <audio id="player2" preload="none" controls style="max-width: 100%">
+                    <source src="{{ episode.audio_url }}" type="audio/mp3">
+                    </audio>
+                  </div>
             <!-- Modal for Playlist Selection -->
 
        <div class="modal fade" id="playlistModal{{ loop.index }}" tabindex="-1" role="dialog" aria-labelledby="playlistModalLabel{{ loop.index }}" aria-hidden="true">
@@ -142,6 +146,10 @@
                     <i class="fas fa-times"></i> Close
                 </button>
             </div>
+
+
+
+
         </div>
     </div>
 </div>
