--- a/templates/episodeslist.html
+++ b/templates/episodeslist.html
@@ -69,7 +69,7 @@
             </h3>
             <div class="text-white mb-3">
                 <span class="text-black-opacity-05">
-                    <small> <span class="sep">/</span> {{ episode.publish_date }}<span class="sep">/</span> 1:30:20</small>
+                    <small> <span class="sep">/</span> {{ episode.publish_date.date()}}<span class="sep">/</span> 1:30:20</small>
                 </span>
             </div>
             <p class="mb-4">
