--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -22,10 +22,7 @@
           <div class="col-lg-4">
             <h3>Subscribe</h3>
             <p>Stay updated with the latest content! Subscribe now and never miss an episode!</p>
-            <form action="#" class="form-subscribe">
-              <input type="email" class="form-control mb-3" placeholder="Enter Email">
-              <input type="submit" class="btn btn-primary" value="Subscribe">
-            </form>
+                    {% include 'partials/_email_form.html' %}
           </div>
         </div>
 
