--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
  <div class="site-wrap">
 
 
-    <div class="site-blocks-cover inner-page-cover bg-light mb-5" style="background-image: url(/static/images/hero_bg_1.jpg);">
+    <div class="site-blocks-cover inner-page-cover bg-light mb-5" style="background-image: url(../static/images/hero_bg_1.jpg);">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-12 text-center">
@@ -37,7 +37,7 @@
 
 
 
-    <div class="site-blocks-cover overlay inner-page-cover " style="background-image: url(/static/images/hero_bg_1.jpg);margin-bottom: 10em" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay inner-page-cover " style="background-image: url(../static/images/hero_bg_1.jpg);margin-bottom: 10em" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
 
