--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Podcast &mdash; Colorlib Website Template</title>
+  <title>Shortcast &mdash;Big Ideas, Bite-Sized Talks</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="csrf-token" content="{{ csrf_token() }}">
@@ -31,10 +31,10 @@
     {% include 'header.html' %}
 
     {% block content %}{% endblock %}
-
-    {% block otherscripts %}{% endblock %}
     {% include'footer.html' %}
 
+{% block otherscripts%}
+    {% endblock %}
 <script>
   // Wait for the DOM to load
   document.addEventListener('DOMContentLoaded', function () {
